JRADEV-12475 BBC-178 fixing float clearing issue for issue-tab-panel messages. No longer wrapping with the generic-message.vm from JIRA.

--- a/jira-dvcs-connector-plugin/src/main/resources/css/styles.css
+++ b/jira-dvcs-connector-plugin/src/main/resources/css/styles.css
@@ -166,9 +166,7 @@
 
 /* Commit tabs styles */
 .CommitContainer {
-    float: left;
     position: relative;
-    width: 100%;
 }
 .CommitContainerMargin {
     margin: 5px 0 0 45px;
@@ -176,7 +174,7 @@
 .ComiterImage {
     background: none repeat scroll 0 0 white;
     border: 1px solid #E7E7E7;
-    left: 0;
+    left: 6px;
     height: 32px;
     padding: 2px;
     position: absolute;
@@ -212,8 +210,10 @@
     background-color: #f7f7f7;
     border: 1px solid #DDDDDD;
     border-radius: 3px 3px 3px 3px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
     float: left;
-    padding: 0;
     width: 100%;
     padding: 7px 7px 5px 5px;
     -moz-box-shadow: 0px 1px 0px white inset;
@@ -387,14 +387,6 @@
     margin-top: 22px;
     position: absolute;
     width: 17px;
-}
-.message-container {
-    border-bottom: 1px solid #EEEEEE;
-    float: left;
-    height: inherit;
-    padding-bottom: 1.5em;
-    width: 100%;
-    border: none !important;
 }
 
 .customClose {
